k8s/appsrv.yaml


# Quarkus Application Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsrv

spec:
  replicas: 2 #2 Instanzen gewünscht zwecks Skalierung
  selector:
    matchLabels:
      app: appsrv
  template:
    metadata:
      labels:
        app: appsrv
    spec:
      containers:
        - name: appsrv
          image: ghcr.io/sis-hl/backend:latest
          # remove this when stable. Currently we do not take care of version numbers
          imagePullPolicy: Always #Image immer neu ziehen
          ports:
            - containerPort: 8080
#          command: ["tail", "-f", "/dev/null"]
